--- a/composer.json
+++ b/composer.json
@@ -3,5 +3,10 @@
   "description": "Class formatting dates in Russian",
   "require": {
     "php": ">=5.3.0"
+  },
+  "autoload": {
+    "psr-0": {
+      "petrschegolskov/rudate": "/RuDate.php"
+    }
   }
 }
