--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,9 @@
     "php": ">=5.3.0"
   },
   "autoload": {
-    "psr-0": {
-      "petrschegolskov/rudate": "/RuDate.php"
-    }
+    "classmap": [
+            "RuDate/",
+            "RuDate.php"
+        ]
   }
 }
